--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "3.9.3",
     "@material-ui/icons": "3.0.2",
     "@material-ui/lab": "3.0.0-alpha.30",
+    "@turf/bbox": "^6.0.1",
     "d3-color": "^1.2.3",
     "node-sass": "^4.11.0",
     "ol": "5.3.0",
